nav bar break is now done via css

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -7,6 +7,15 @@
     margin-bottom : 10px;
 }
 
+li.break:after {
+    content : '|';
+}
+
+li.break {
+    padding : 15px 0;
+    color   : #9d9d9d;
+}
+
 .btn {
     border-radius : 0;
     border        : none;
