--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -7,3 +7,12 @@
     border-bottom      : 3px solid #227fb7;
     border-left-style  : none;
 }
+
+li.break:after {
+    content : '|';
+}
+
+li.break {
+    padding : 15px 0;
+    color   : #9d9d9d;
+}
