added header logo

--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -4,7 +4,7 @@
 }
 
 .navbar-xs .navbar-brand {
-    padding     : 0 18px;
+    padding     : 6px 18px;
     font-size   : 20px;
     line-height : 40px;
 }
