--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,3 +1,7 @@
+body > .content, body > .container-fluid {
+    padding-top : 60px;
+}
+
 .form-control {
     border-radius : 0;
     border        : none;
