--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -27,12 +27,18 @@ li.break {
     color   : #9d9d9d;
 }
 
+.btn-header-group {
+    width  : 350px;
+    margin : 0 auto;
+}
+
 .btn-header {
     border-radius      : 0;
     color              : #227fb7;
     font-weight        : 700;
     border-top-style   : none;
     border-right-style : none;
-    border-bottom      : 3px solid #227fb7;
+    border-bottom      : 4px solid #227fb7;
     border-left-style  : none;
+    padding            : 12px 23px;
 }
