--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #ECECEC;
+}
+
 .form-control {
     border-radius : 0;
     border        : none;
@@ -35,7 +39,6 @@
     border-radius    : 75px;
     background-color : #fff;
     color            : #DF3442;
-    margin           : 25px auto;
     font-weight      : 700;
     text-align       : center;
     vertical-align   : middle;
