--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -17,6 +17,7 @@ h4 {
 
 .panel-main > .panel-heading {
     background-color : #DFDFDF;
+    border-radius    : 0;
     padding          : 20px 25px;
 }
 
@@ -27,7 +28,8 @@ h4 {
 }
 
 .panel-main > .panel-body {
-    padding : 15px 0;
+    padding       : 15px 0;
+    border-radius : 0;
 }
 
 .panel-main > .panel-body > p {
