--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -2,6 +2,10 @@ body {
     background-color : #ECECEC;
 }
 
+.help-block {
+    color : #A81B2C;
+}
+
 .form-control {
     border-radius : 0;
     border        : none;
@@ -54,4 +58,24 @@ body {
 .auto-width-no-max {
     width  : 100%;
     height : auto;
+}
+
+.table>thead {
+    background-color: #ECECEC;
+}
+
+.table>thead>tr>th {
+    border-bottom: none;
+}
+
+.table>tbody{
+    background-color: #FFFFFF;
+}
+
+.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
+    border-top : none;
+}
+
+.table>thead>tr>th, .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
+    padding : 15px;
 }
