--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -2,6 +2,11 @@ body {
     background-color : #ECECEC;
 }
 
+.heading-red {
+    background-color : #E03442;
+    padding-bottom   : 100px;
+}
+
 .help-block {
     color : #A81B2C;
 }
@@ -60,22 +65,22 @@ body {
     height : auto;
 }
 
-.table>thead {
-    background-color: #ECECEC;
+.table > thead {
+    background-color : #ECECEC;
 }
 
-.table>thead>tr>th {
-    border-bottom: none;
+.table > thead > tr > th {
+    border-bottom : none;
 }
 
-.table>tbody{
-    background-color: #FFFFFF;
+.table > tbody {
+    background-color : #FFFFFF;
 }
 
-.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
+.table > tbody > tr > td, .table > tbody > tr > th, .table > tfoot > tr > td, .table > tfoot > tr > th, .table > thead > tr > td, .table > thead > tr > th {
     border-top : none;
 }
 
-.table>thead>tr>th, .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
+.table > thead > tr > th, .table > tbody > tr > td, .table > tbody > tr > th, .table > tfoot > tr > td, .table > tfoot > tr > th, .table > thead > tr > td, .table > thead > tr > th {
     padding : 15px;
 }
