--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -18,6 +18,7 @@
     vertical-align   : middle;
     line-height      : 75px;
     font-size        : 1.5em;
+    margin           : 50px auto;
 }
 
 .auto-width {
